Efecto rotacion de carta y texto

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -10,12 +10,15 @@
     <section>
         <div class="figure" id="one">
             <p>Hola Mundo!</p>
+            <p class="darkside">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi totam culpa ipsam ex iste officiis.</p>
         </div>
         <div class="figure" id="two">
             <p>Hola Mundo!</p>
+            <p class="darkside">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi totam culpa ipsam ex iste officiis.</p>
         </div>
         <div class="figure" id="three">
             <p>Hola Mundo!</p>
+            <p class="darkside">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi totam culpa ipsam ex iste officiis.</p>
         </div>
     </section>
 </body>
