Estilo de formulario

--- a/Ejercicios/ej3/index.html
+++ b/Ejercicios/ej3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,8 +35,11 @@
             <form action="">
                 <input type="text" name="nombre" id="nombre" placeholder="Nombre..">
                 <input type="email" name="email" id="email" placeholder="Email..">
-                <textarea name="" id="" cols="30" rows="10" placeholder="MEnsaje.."></textarea>
-                <input type="checkbox" name="checkb" id="checkb">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje.."></textarea>
+                <div>
+                    <input type="checkbox" name="checkb" id="checkb">
+                    <label for="checkb">Aceptar</label>
+                </div>
                 <button type="submit">Enviar</button>
             </form>
     
