--- a/Final/index.html
+++ b/Final/index.html
@@ -59,13 +59,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="position: relative;">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="Imagenes/js.jpg" class="d-block w-100 slider-img" alt="Javascript">
+                <img src="Imagenes/slider/js.jpg" class="d-block w-100 slider-img" alt="Javascript">
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/jquery.jpg" class="d-block w-100 slider-img" alt="Jquery">
+                <img src="Imagenes/slider/jquery.jpg" class="d-block w-100 slider-img" alt="Jquery">
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/bootstrap.png" class="d-block w-100 slider-img" alt="code">
+                <img src="Imagenes/slider/bootstrap.png" class="d-block w-100 slider-img" alt="code">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -91,7 +91,7 @@
             <div class="col-12 col-md-4 justify-content-center">
               <div class="card" style="width: 18rem;">
                 <!-- <i class="fab fa-html5"></i> --> 
-                <img src="Imagenes/icono1.png" alt="" class="img-fluid w-50 m-auto">
+                <img src="Imagenes/icons/icono1.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">HTML</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -103,7 +103,7 @@
             <div class="col-12 col-md-4 my-3 my-md-0">
               <div class="card" style="width: 18rem;">
                 <!-- <i class="fab fa-css3-alt"></i> -->
-                <img src="Imagenes/icono2.png" alt="" class="img-fluid w-50 m-auto">
+                <img src="Imagenes/icons/icono2.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">CSS</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,7 +115,7 @@
             <div class="col-12 col-md-4">
               <div class="card text-center" style="width: 18rem;">
                 <!-- <i class="fab fa-bootstrap"></i> -->
-                <img src="Imagenes/icono3.png" alt="" class="img-fluid w-50 m-auto">
+                <img src="Imagenes/icons/icono3.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">Bootstrap</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
