Subo img de tamaño correcto

--- a/Final/index.html
+++ b/Final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Final Curso Maquetacion</title>
-    <link rel="icon" type="image/ico" href="Imagenes/icono.ico"/>
+    <link rel="icon" type="image/ico" href="Imagenes/icons/icono.ico"/>
 
     <!-- Librerias CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -65,7 +65,7 @@
                 <img src="Imagenes/slider/jquery.jpg" class="d-block w-100 slider-img" alt="Jquery">
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/slider/bootstrap.png" class="d-block w-100 slider-img" alt="code">
+                <img src="Imagenes/slider/bootstrap.jpg" class="d-block w-100 slider-img" alt="code">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -83,14 +83,13 @@
           </div>
     </header>
 
-    <main>
-      <section class="servicios py-5 bg-light">
+    <main class="">
+      <section class="servicios py-5 bg-dark">
         <div class="container">
           <div class="row">
 
             <div class="col-12 col-md-4 justify-content-center">
               <div class="card" style="width: 18rem;">
-                <!-- <i class="fab fa-html5"></i> --> 
                 <img src="Imagenes/icons/icono1.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">HTML</h5>
@@ -102,7 +101,6 @@
 
             <div class="col-12 col-md-4 my-3 my-md-0">
               <div class="card" style="width: 18rem;">
-                <!-- <i class="fab fa-css3-alt"></i> -->
                 <img src="Imagenes/icons/icono2.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">CSS</h5>
@@ -114,7 +112,6 @@
 
             <div class="col-12 col-md-4">
               <div class="card text-center" style="width: 18rem;">
-                <!-- <i class="fab fa-bootstrap"></i> -->
                 <img src="Imagenes/icons/icono3.png" alt="" class="img-fluid w-50 m-auto">
                 <div class="card-body">
                   <h5 class="card-title">Bootstrap</h5>
