Lista seccion lenguajes

--- a/Final/index.html
+++ b/Final/index.html
@@ -86,49 +86,39 @@
     <main class="">
       <section class="servicios py-5 bg-dark">
         <div class="container">
-          <div class="row">
-
-            <div class="col-12 col-md-4 justify-content-center">
-              <div class="card" style="width: 18rem;">
-                <img src="Imagenes/icons/icono1.png" alt="" class="img-fluid w-50 m-auto">
-                <div class="card-body">
-                  <h5 class="card-title">HTML</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-info btn-block">Ver lenguaje</a>
-                </div>
+          <div class="card-deck">
+            <div class="card">
+              <img src="Imagenes/icons/html.png" class="card-img-top card-image m-auto" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">HTML</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-info btn-block">Ver documentación</a>
               </div>
             </div>
-
-            <div class="col-12 col-md-4 my-3 my-md-0">
-              <div class="card" style="width: 18rem;">
-                <img src="Imagenes/icons/icono2.png" alt="" class="img-fluid w-50 m-auto">
-                <div class="card-body">
-                  <h5 class="card-title">CSS</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-danger btn-block">Ver lenguaje</a>
-                </div>
+            <div class="card">
+              <img src="Imagenes/icons/css.png" class="card-img-top card-image m-auto" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">CSS</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
               </div>
             </div>
-
-            <div class="col-12 col-md-4">
-              <div class="card text-center" style="width: 18rem;">
-                <img src="Imagenes/icons/icono3.png" alt="" class="img-fluid w-50 m-auto">
-                <div class="card-body">
-                  <h5 class="card-title">Bootstrap</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-success btn-block">Ver lenguaje</a>
-                </div>
+            <div class="card">
+              <img src="Imagenes/icons/js.png" class="card-img-top card-image m-auto" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">JavaScript</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-success btn-block">Ver documentación</a>
               </div>
             </div>
-
           </div>
         </div>
       </section>
 
-      <section class="contacto py-5">
+      <section class="contacto py-5 bg-light">
         <div class="container">
-          <div class="row d-flex justify-content-center">
-            <div class="col-12 col-sm-10 border p-5">
+          <div class="row d-flex justify-content-center ">
+            <div class="col-12  p-5">
 
               <h3 class="mb-4">Suscribirse al newsletter</h3>
 
