Cambio urls de nav

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -36,17 +36,16 @@
               <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="acercade.html">Acerca de</a>
+              <a class="nav-link" href="index.html#lenguajes">Lenguajes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Servicios
+                Acerca de..
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="acercade.html">Html</a>
+                <a class="dropdown-item" href="acercade.html">Css</a>
+                <a class="dropdown-item" href="acercade.html">JavaScript</a>
               </div>
             </li>
           </ul>
