--- a/Final/index.html
+++ b/Final/index.html
@@ -21,6 +21,9 @@
     <!-- JS propio -->
     <script  type="text/javascript" src="js/scripts.js"></script>
 
+    <!-- Fontawesome Kit -->
+    <script src="https://kit.fontawesome.com/4657d46491.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
 
@@ -44,7 +47,7 @@
                 Acerca de..
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="acercade.html">Html</a>
+                <a class="dropdown-item" href="acercade.html#html">Html</a>
                 <a class="dropdown-item" href="acercade.html">Css</a>
                 <a class="dropdown-item" href="acercade.html">JavaScript</a>
               </div>
@@ -86,7 +89,7 @@
       <section class="servicios py-5 bg-dark" id="lenguajes">
         <div class="container">
           <div class="card-deck">
-            <div class="card">
+            <div class="card my-5 mx-3">
               <img src="Imagenes/icons/html.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">HTML</h5>
@@ -94,7 +97,7 @@
                 <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-info btn-block">Ver documentación</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card my-5 mx-3">
               <img src="Imagenes/icons/css.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">CSS</h5>
@@ -102,7 +105,7 @@
                 <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card my-5 mx-3">
               <img src="Imagenes/icons/js.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">JavaScript</h5>
@@ -113,8 +116,61 @@
           </div>
         </div>
       </section>
+      <section class="galeria container-fluid" id="galeria">
+        <div class="row">
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
+            <a href="#">
+              <div class="galery-item__hover">
+                <i class="fas fa-search-plus"></i>
+                <p>Ver</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/462024/pexels-photo-462024.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
+            <a href="#">
+              <div class="galery-item__hover">
+                <i class="fas fa-search-plus"></i>
+                <p>Ver</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
+            <a href="#">
+              <div class="galery-item__hover">
+                <i class="fas fa-search-plus"></i>
+                <p>Ver</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/258109/pexels-photo-258109.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
+            <a href="#">
+              <div class="galery-item__hover">
+                <i class="fas fa-search-plus"></i>
+                <p>Ver</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);" >
+              <a href="#">
+                <div class="galery-item__hover">
+                  <i class="fas fa-search-plus"></i>
+                  <p>Ver</p>
+                </div>
+              </a>
+          </div>
+          <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/1144176/pexels-photo-1144176.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
+            <a href="#">
+              <div class="galery-item__hover">
+                <i class="fas fa-search-plus"></i>
+                <p>Ver</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
 
-      <section class="contacto py-5 bg-light">
+      <footer class="contacto py-5 bg-light">
         <div class="container">
           <div class="row d-flex justify-content-center ">
             <div class="col-12  p-5">
@@ -161,10 +217,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </footer>
 
 
-    </main>
+    
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
