Colores de botones en cards de index

--- a/Final/index.html
+++ b/Final/index.html
@@ -91,26 +91,23 @@
           <div class="card-deck">
             <div class="card my-5 mx-3">
               <img src="Imagenes/icons/html.png" class="card-img-top card-image m-auto" alt="...">
-              <div class="card-body text-center">
-                <h5 class="card-title">HTML</h5>
+              <div class="card-body text-center"> 
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-info btn-block">Ver documentación</a>
+                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="Imagenes/icons/css.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title">CSS</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
+                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-primary btn-block">Ver documentación</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="Imagenes/icons/js.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title">JavaScript</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-success btn-block">Ver documentación</a>
+                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-warning btn-block">Ver documentación</a>
               </div>
             </div>
           </div>
