--- a/Final/index.html
+++ b/Final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Final Curso Maquetacion</title>
-    <link rel="icon" type="image/ico" href="Imagenes/icons/icono.ico"/>
+    <link rel="icon" type="image/ico" href="img/icons/icono.ico"/>
 
     <!-- Librerias CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -61,13 +61,16 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="position: relative;">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="Imagenes/slider/js.jpg" class="d-block w-100 slider-img" alt="Javascript">
+                <img src="img/slider/1.jpg" class="d-block w-100 slider-img" alt="Javascript">
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/slider/jquery.jpg" class="d-block w-100 slider-img" alt="Jquery">
+                <img src="img/slider/2.jpg" class="d-block w-100 slider-img" alt="Jquery">
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/slider/bootstrap.jpg" class="d-block w-100 slider-img" alt="code">
+                <img src="img/slider/3.jpg" class="d-block w-100 slider-img" alt="code">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/4.jpg" class="d-block w-100 slider-img" alt="code">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -90,21 +93,21 @@
         <div class="container">
           <div class="card-deck">
             <div class="card my-5 mx-3">
-              <img src="Imagenes/icons/html.png" class="card-img-top card-image m-auto" alt="...">
+              <img src="img/icons/html.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center"> 
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
-              <img src="Imagenes/icons/css.png" class="card-img-top card-image m-auto" alt="...">
+              <img src="img/icons/css.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-primary btn-block">Ver documentación</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
-              <img src="Imagenes/icons/js.png" class="card-img-top card-image m-auto" alt="...">
+              <img src="img/icons/js.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-warning btn-block">Ver documentación</a>
