Agrego titulos a secciones del index

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html#lenguajes">Lenguajes</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#galeria">Galería</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Acerca de..
