--- a/Final/index.html
+++ b/Final/index.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#lenguajes">Lenguajes</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#galeria">Galería</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Acerca de..
@@ -91,32 +94,34 @@
     <main class="">
       <section class="servicios py-5 bg-dark" id="lenguajes">
         <div class="container">
+          <h2 class="display-4 text-center text-light pt-2">Lenguajes</h2>
           <div class="card-deck">
             <div class="card my-5 mx-3">
               <img src="img/icons/html.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center"> 
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-danger btn-block">Ver documentación</a>
+                <p class="card-text">"HyperText Markup Language", la pieza más básica para la construcción de una web..</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-danger btn-block">Ver más</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="img/icons/css.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-primary btn-block">Ver documentación</a>
+                <p class="card-text">"Cascading Style Sheets", lenguaje declarativo que controla el aspecto de las páginas web..</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="img/icons/js.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-warning btn-block">Ver documentación</a>
+                <p class="card-text">Abreviado "JS", lenguaje de programación que permite la existencia de páginas web interactivas..</p>
+                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-warning btn-block">Ver más</a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="galeria container-fluid" id="galeria">
+      <section class="galeria container-fluid py-5" id="galeria">
+        <h2 class="display-4 text-center text-dark mb-5 pt-2">Galería</h2>
         <div class="row">
           <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
             <a href="#">
