Agrego scrollspy y borderbottom en nav

--- a/Final/index.html
+++ b/Final/index.html
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/4657d46491.js" crossorigin="anonymous"></script>
 
   </head>
-  <body>
+  <body data-spy="scroll">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -36,8 +36,8 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="#inicio">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#lenguajes">Lenguajes</a>
@@ -51,8 +51,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="acercade.html#html">Html</a>
-                <a class="dropdown-item" href="acercade.html">Css</a>
-                <a class="dropdown-item" href="acercade.html">JavaScript</a>
+                <a class="dropdown-item" href="acercade.html#css">Css</a>
+                <a class="dropdown-item" href="acercade.html#js">JavaScript</a>
               </div>
             </li>
           </ul>
@@ -60,7 +60,7 @@
       </div>
     </nav>
 
-    <header class="header">
+    <header class="header" id="inicio">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="position: relative;">
             <div class="carousel-inner">
               <div class="carousel-item active">
