Estilo secciones de acercade y cambio  links de botones en index

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -46,9 +46,9 @@
                 Acerca de..
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="acercade.html">Html</a>
-                <a class="dropdown-item" href="acercade.html">Css</a>
-                <a class="dropdown-item" href="acercade.html">JavaScript</a>
+                <a class="dropdown-item" href="acercade.html#html">Html</a>
+                <a class="dropdown-item" href="acercade.html#css">Css</a>
+                <a class="dropdown-item" href="acercade.html#js">JavaScript</a>
               </div>
             </li>
           </ul>
@@ -59,11 +59,12 @@
     <header class="container-fluid bg-dark d-flex align-items-center justify-content-center" style="min-height: 20vh;">
       <h1 class="text-warning">Acerca de..</h1>
     </header>
+    
     <section id="html" >
       <div class="container py-4">
         <div class="row align-items-center">
           <div class="col-12 col-md-8">
-            <h2>blabla</h2>
+            <h2>HTML</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus quam vero, sunt ab quasi deleniti nam distinctio optio quas tenetur rerum voluptas culpa dignissimos corrupti obcaecati fugit. Perspiciatis, aspernatur. Magni accusamus harum velit culpa ipsam tenetur aliquid dolorem perspiciatis!</p>
 
             <div class="accordion" id="accordionExample">
@@ -85,20 +86,20 @@
             </div>
           </div>
           <div class="col-12 col-md-4 text-center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr8UUQk1pH3rudCGBGD4ija4qbyO-lxuDianvUCzHHYAKaHLQ&s" class=" img-fluid rounded-circle overflow-hidden" alt="">
+            <img src="https://webref.ru/assets/images/book/learn-html-css_1.png" class=" img-fluid rounded-circle p-5" alt="">
           </div>
         </div>
       </div>
     </section>
 
-    <section id="css" class="bg-success">
+    <section id="css" class="bg-dark text-light">
       <div class="container py-5">
         <div class="row align-items-center">
           <div class="col-12 col-md-4 text-center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr8UUQk1pH3rudCGBGD4ija4qbyO-lxuDianvUCzHHYAKaHLQ&s" class=" img-fluid rounded-circle overflow-hidden" alt="">
+            <img src="https://spectrum.imgix.net/communities/4c5f567b-cc9e-4fc5-a09b-b60a4ee0e671/css.png.0.504013866339108?w=256&h=256&dpr=2&auto=compress&expires=1584057600000&ixlib=js-1.4.1&s=63535f620226bb9e8247eefe8c7e0a8e" class="img-fluid rounded-circle p-5" alt="">
           </div>
           <div class="col-12 col-md-8">
-            <h2>blabla</h2>
+            <h2>CSS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus quam vero, sunt ab quasi deleniti nam distinctio optio quas tenetur rerum voluptas culpa dignissimos corrupti obcaecati fugit. Perspiciatis, aspernatur. Magni accusamus harum velit culpa ipsam tenetur aliquid dolorem perspiciatis!</p>
 
             <div class="accordion" id="accordionExample">
@@ -112,7 +113,7 @@
                 </div>
             
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
+                  <div class="card-body text-dark">
                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                   </div>
                 </div>
@@ -128,7 +129,7 @@
       <div class="container py-4">
         <div class="row align-items-center">
           <div class="col-12 col-md-8">
-            <h2>blabla</h2>
+            <h2>JavaScript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus quam vero, sunt ab quasi deleniti nam distinctio optio quas tenetur rerum voluptas culpa dignissimos corrupti obcaecati fugit. Perspiciatis, aspernatur. Magni accusamus harum velit culpa ipsam tenetur aliquid dolorem perspiciatis!</p>
 
             <div class="accordion" id="accordionExample">
@@ -150,13 +151,13 @@
             </div>
           </div>
           <div class="col-12 col-md-4 text-center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr8UUQk1pH3rudCGBGD4ija4qbyO-lxuDianvUCzHHYAKaHLQ&s" class=" img-fluid rounded-circle overflow-hidden" alt="">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/512px-Unofficial_JavaScript_logo_2.svg.png" class="img-fluid rounded-circle p-5" alt="">
           </div>
         </div>
       </div>
     </section>
 
-    <section id="popup__section">
+    <section id="popup__section" class="d-none">
       <div class="container">
         <div class="row justify-content-around py-4">
           <div class="col-12 col-md-4">
