--- a/Final/index.html
+++ b/Final/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Final Curso Maquetacion</title>
-    <link rel="icon" type="image/ico" href="img/icons/icono.ico"/>
+    <link rel="favicon" type="image/ico" href="img/icons/icono.ico"/>
 
     <!-- Librerias CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- CSS propios -->
     <link type="text/css" rel="stylesheet" href="css/style.css">
 
-    <!-- Librerias JS -->
-    <script type="text/javascript" src="lib/jquery/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <!-- JS propio -->
-    <script  type="text/javascript" src="js/scripts.js"></script>
 
     <!-- Fontawesome Kit -->
     <script src="https://kit.fontawesome.com/4657d46491.js" crossorigin="anonymous"></script>
@@ -100,21 +94,21 @@
               <img src="img/icons/html.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center"> 
                 <p class="card-text">"HyperText Markup Language", la pieza más básica para la construcción de una web..</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank" class="btn btn-danger btn-block">Ver más</a>
+                <a href="acercade.html#html" class="btn btn-danger btn-block">Ver más</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="img/icons/css.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <p class="card-text">"Cascading Style Sheets", lenguaje declarativo que controla el aspecto de las páginas web..</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank" class="btn btn-primary btn-block">Ver más</a>
+                <a href="acercade.html#css" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
             <div class="card my-5 mx-3">
               <img src="img/icons/js.png" class="card-img-top card-image m-auto" alt="...">
               <div class="card-body text-center">
                 <p class="card-text">Abreviado "JS", lenguaje de programación que permite la existencia de páginas web interactivas..</p>
-                <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank" class="btn btn-warning btn-block">Ver más</a>
+                <a href="acercade.html#js" class="btn btn-warning btn-block">Ver más</a>
               </div>
             </div>
           </div>
