--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -68,13 +68,11 @@
 
             <div class="accordion" id="accordionHtml">
               <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Acordeon 
-                    </button>
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h3 class="mb-0 h5">
+                    Acordeon 
                     <i class="fas fa-angle-down float-right mt-2"></i>
-                  </h2>
+                  </h3>
                 </div>
             
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionHtml">
@@ -104,17 +102,15 @@
 
             <div class="accordion" id="accordionCss">
               <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
-                      Acordeon 
-                    </button>
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
+                  <h2 class="mb-0 h5 text-dark">
+                    Acordeon 
                     <i class="fas fa-angle-down float-right mt-2 text-dark"></i>
                   </h2>
                 </div>
             
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionCss">
-                  <div class="card-body text-dark">
+                  <div class="card-body bg-dark text-light">
                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                   </div>
                 </div>
@@ -135,11 +131,9 @@
 
             <div class="accordion" id="accordionJs">
               <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseOne">
-                      Acordeon 
-                    </button>
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseOne">
+                  <h2 class="mb-0 h5">
+                    Acordeon 
                     <i class="fas fa-angle-down float-right mt-2"></i>
                   </h2>
                 </div>
