--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -171,6 +171,26 @@
       </div>
     </section>
 
+    <footer class="footer py-5 bg-dark text-light" id="foo">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-12 col-md-4">
+            <p class="text-justify m-0 px-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias reiciendis quae quisquam, rerum illum maxime? Ullam atque quas nemo quis.</p>
+          </div>
+          <div class="col-12 col-md-4 text-center mt-4 mt-md-0">
+            <i class="fab fa-facebook-square px-4"></i>
+            <i class="fab fa-instagram-square px-4"></i>
+            <i class="fab fa-linkedin px-4"></i>
+          </div>
+          <div class="col-12 col-md-4 text-right">
+            <span class="d-block">Lorem, ipsum dolor.</span>
+            <span class="d-block">Lorem ipsum dolor sit amet.</span>
+            <span class="d-block">Lorem, ipsum.</span>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <section id="popup__section" class="d-none">
       <div class="container">
         <div class="row justify-content-around py-4">
