Paso url del background al html (calltoaction.jpg)

--- a/Final/index.html
+++ b/Final/index.html
@@ -145,7 +145,7 @@
             </form>
           </div>
   
-          <div class="col-12 col-md-6 calltoaction__container--img">
+          <div class="col-12 col-md-6 calltoaction__container--img" style="background-image: url(img/calltoaction.jpg); ">
             <!-- Imagen de call to action -->
           </div>
   
