Cambio imgs de galeria

--- a/Final/index.html
+++ b/Final/index.html
@@ -145,7 +145,7 @@
             </form>
           </div>
   
-          <div class="col-12 col-md-6 calltoaction__container--img" style="background-image: url(img/calltoaction.jpg); ">
+          <div class="col-12 col-md-6 calltoaction__container--img" style="background-image: url(img/calltoaction.jpg);">
             <!-- Imagen de call to action -->
           </div>
   
@@ -157,48 +157,48 @@
     <section class="container-fluid pt-5 bg-dark" id="galeria">
       <h2 class="display-4 text-center text-light mb-5 pt-2">Galería</h2>
       <div class="row">
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/814499/pexels-photo-814499.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
-          <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/500/500);">
+          <a href="http://placekitten.com/500/500">
             <div class="galery-item__hover">
               <i class="fas fa-search-plus"></i>
               <p>Ver</p>
             </div>
           </a>
         </div>
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/462024/pexels-photo-462024.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
-          <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/g/500/500);">
+          <a href="http://placekitten.com/g/500/500">
             <div class="galery-item__hover">
               <i class="fas fa-search-plus"></i>
               <p>Ver</p>
             </div>
           </a>
         </div>
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
-          <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/450/450);">
+          <a href="http://placekitten.com/450/450">
             <div class="galery-item__hover">
               <i class="fas fa-search-plus"></i>
               <p>Ver</p>
             </div>
           </a>
         </div>
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/258109/pexels-photo-258109.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
-          <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/g/550/550);">
+          <a href="http://placekitten.com/g/550/550">
             <div class="galery-item__hover">
               <i class="fas fa-search-plus"></i>
               <p>Ver</p>
             </div>
           </a>
         </div>
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);" >
-            <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/550/550);" >
+            <a href="http://placekitten.com/550/550">
               <div class="galery-item__hover">
                 <i class="fas fa-search-plus"></i>
                 <p>Ver</p>
               </div>
             </a>
         </div>
-        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(https://images.pexels.com/photos/1144176/pexels-photo-1144176.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
-          <a href="#">
+        <div class="col-12 col-sm-6 col col-lg-4 galery-item" style="background-image: url(http://placekitten.com/g/600/600);">
+          <a href="http://placekitten.com/g/600/600">
             <div class="galery-item__hover">
               <i class="fas fa-search-plus"></i>
               <p>Ver</p>
