--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -183,9 +183,9 @@
             <i class="fab fa-linkedin px-4"></i>
           </div>
           <div class="col-12 col-md-4 text-right">
-            <span class="d-block">Lorem, ipsum dolor.</span>
-            <span class="d-block">Lorem ipsum dolor sit amet.</span>
-            <span class="d-block">Lorem, ipsum.</span>
+            <span class="d-block">info@lorem.com</span>
+            <span class="d-block">+54 9 341 5555555.</span>
+            <span class="d-block">Rosario, Santa Fe, Argentina</span>
           </div>
         </div>
       </div>
