Agrego 2 google fonts

--- a/Final/index.html
+++ b/Final/index.html
@@ -221,7 +221,7 @@
             <i class="fab fa-instagram-square px-4"></i>
             <i class="fab fa-linkedin px-4"></i>
           </div>
-          <div class="col-12 col-md-4 text-right">
+          <div class="col-12 col-md-4 text-right footer__contacto">
             <span class="d-block">info@lorem.com</span>
             <span class="d-block">+54 9 341 5555555.</span>
             <span class="d-block">Rosario, Santa Fe, Argentina</span>
