--- a/Final/index.html
+++ b/Final/index.html
@@ -214,14 +214,14 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-12 col-md-4">
-            <p class="text-justify m-0 px-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias reiciendis quae quisquam, rerum illum maxime? Ullam atque quas nemo quis.</p>
+            <p class="text-justify m-0 text-muted small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias reiciendis quae quisquam, rerum illum maxime? Ullam atque quas nemo quis.</p>
           </div>
           <div class="col-12 col-md-4 text-center mt-4 mt-md-0">
             <i class="fab fa-facebook-square px-4"></i>
             <i class="fab fa-instagram-square px-4"></i>
             <i class="fab fa-linkedin px-4"></i>
           </div>
-          <div class="col-12 col-md-4 text-right footer__contacto">
+          <div class="col-12 col-md-4 mt-3 mt-md-0 text-md-right text-center">
             <span class="d-block">info@lorem.com</span>
             <span class="d-block">+54 9 341 5555555.</span>
             <span class="d-block">Rosario, Santa Fe, Argentina</span>
