Estilo modal__section

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -171,6 +171,19 @@
       </div>
     </section>
 
+    <section id="popup__section" class="popup__section text-light" style="background-image: linear-gradient(rgba(90, 90, 90, 0.8) 0%, rgba(82, 82, 82, 0.8) 100%), url(img/popup-background.jpg);">
+      <div class="container">
+        <div class="row justify-content-around align-items-center py-5">
+          <div class="col-12 col-md-4">
+            <p class="text-justify m-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium assumenda, quo laudantium velit non aspernatur est placeat ad commodi eius iusto. Ducimus consectetur facilis error. Reiciendis praesentium perspiciatis hic porro?</p>
+          </div>
+          <div class="col-12 col-md-4 text-center">
+            <button class="btn btn-success" id="modalButton">Abrir modal</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer py-5 bg-dark text-light" id="foo">
       <div class="container">
         <div class="row justify-content-center align-items-center">
@@ -190,23 +203,6 @@
         </div>
       </div>
     </footer>
-
-    <section id="popup__section" class="d-none">
-      <div class="container">
-        <div class="row justify-content-around py-4">
-          <div class="col-12 col-md-4">
-            <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium assumenda, quo laudantium velit non aspernatur est placeat ad commodi eius iusto. Ducimus consectetur facilis error. Reiciendis praesentium perspiciatis hic porro?</p>
-          </div>
-          <div class="col-12 col-md-4">
-            ASFASF
-          </div>
-        </div>
-      </div>
-    </section>
-    
-
-
-    
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
