Agrego modal y su contenido, controlo boton del modal desde js

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -13,9 +13,6 @@
     <!-- CSS propios -->
     <link type="text/css" rel="stylesheet" href="css/style.css">
 
-    <!-- JS propio -->
-    <script  type="text/javascript" src="js/scripts.js"></script>
-
      <!-- Fontawesome Kit -->
      <script src="https://kit.fontawesome.com/4657d46491.js" crossorigin="anonymous"></script>
 
@@ -178,7 +175,7 @@
             <p class="text-justify m-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium assumenda, quo laudantium velit non aspernatur est placeat ad commodi eius iusto. Ducimus consectetur facilis error. Reiciendis praesentium perspiciatis hic porro?</p>
           </div>
           <div class="col-12 col-md-4 text-center">
-            <button class="btn btn-success" id="modalButton">Abrir modal</button>
+            <button class="btn btn-success" id="modalButton" data-toggle="modal" data-target="#exampleModalCenter">Abrir modal</button>
           </div>
         </div>
       </div>
@@ -204,8 +201,32 @@
       </div>
     </footer>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="modalBody">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus velit autem minima nulla facere cupiditate maxime unde, fugit voluptatem quisquam dolorum ut sit cumque quibusdam eius est voluptatibus itaque enim?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-success" id="modalButtonOk">Aceptar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+        <!-- Custom JS -->
+        <script src="js/main.js"></script>
   </body>
 </html>
