--- a/Final/index.html
+++ b/Final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Final Curso Maquetacion</title>
-    <link rel="favicon" type="image/ico" href="img/icons/icono.ico"/>
+    <link rel="icon" type="image/ico" href="img/icons/icono.ico"/>
 
     <!-- Librerias CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
