--- a/Final/index.html
+++ b/Final/index.html
@@ -49,6 +49,9 @@
                 <a class="dropdown-item" href="acercade.html#js">JavaScript</a>
               </div>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
           </ul>
         </div>
       </div>
